--- a/templates/result.gohtml
+++ b/templates/result.gohtml
@@ -35,6 +35,6 @@
 {{ end }}</pre></details>{{ end }}
     </div>
   </div>
-  <div class="actions"><a class="btn btn-secondary" href="/">Nieuwe check</a><a class="btn btn-ghost" href="/api/check?domain={{ .Info.DomainInput }}" target="_blank" rel="noopener">JSON API</a></div>
+  <div class="actions"><a class="btn btn-secondary" href="/forsale">Nieuwe check</a><a class="btn btn-ghost" href="/api/check?domain={{ .Info.DomainInput }}" target="_blank" rel="noopener">JSON API</a></div>
 </section>
 {{ end }}
