--- a/templates/layout.gohtml
+++ b/templates/layout.gohtml
@@ -32,8 +32,8 @@
 
   <footer class="site-footer">
     <div class="container">
-      <p>&copy; {{ .Now.Format "2006" }} SIDN Labs · Voorbeeldimplementatie op basis van de <em>_for-sale</em> Internet‑Draft.
-        Gebruiksvriendelijk & veilig; geen automatische redirects.</p>
+      <p>&copy; {{ .Now.Format "2006" }} SIDN Labs · <a href="https://github.com/mdavids/forsale-web">Voorbeeldimplementatie</a> op basis van de
+<a href="https://datatracker.ietf.org/doc/html/draft-davids-forsalereg"><em>_for-sale</em> Internet‑Draft</a>.</p>
     </div>
   </footer>
 
