--- a/templates/layout.gohtml
+++ b/templates/layout.gohtml
@@ -31,9 +31,9 @@
   </main>
 
   <footer class="site-footer">
-    <div class="container">
-      <p>&copy; {{ .Now.Format "2006" }} SIDN Labs · <a href="https://github.com/mdavids/forsale-web">Voorbeeldimplementatie</a> op basis van de
-<a href="https://datatracker.ietf.org/doc/html/draft-davids-forsalereg"><em>_for-sale</em> Internet‑Draft</a>.</p>
+    <div class="container footer-inline" >
+      <p><img src="/SIDN_Labs_logo.svg" alt="sidnlabs logo">&copy; {{ .Now.Format "2006" }} SIDN Labs · <a href="https://github.com/mdavids/forsale-web">Voorbeeldimplementatie</a> op basis van de
+         <a href="https://datatracker.ietf.org/doc/html/draft-davids-forsalereg"><em>_for-sale</em> Internet‑Draft</a>.</p>
     </div>
   </footer>
 
