--- a/templates/result.gohtml
+++ b/templates/result.gohtml
@@ -20,9 +20,8 @@
           <br>
           {{ if .Info.FTxt }}<div class="panel"><h3>Extra informatie:</h3><ul class="list">{{ range .Info.FTxt }}<li>{{ . }}</li>{{ end }}</ul></div>{{ end }}
           <br>
-<!--
-          {{ if .Info.FCod }}<div class="panel"><h3>Verwerkingscode(s):</h3><ul class="list">{{ range .Info.FCod }}<li class="mono">{{ . }}</li>{{ end }}</ul><p class="hint">Deze codes zijn doorgaans alleen maar betekenisvol binnen een ecosysteem (bijv. registrar/registry).</p></div>{{ end }}
--->
+          {{ if .Info.FCod }}<div class="panel"><h3>Verwerkingscode(s):</h3><ul class="list">{{ range .Info.FCod }}<li>{{ if .HasRDAPData }}<a href="#" onclick="confirmOpen('{{ .ForSaleURL }}')" class="link">{{ .ForSaleURL }}</a><br>{{ end }}<span class="mono">{{ .Code }}</span></li>{{ end }}</ul><p class="hint">Deze codes zijn doorgaans alleen maar betekenisvol binnen een ecosysteem (bijv. registrar/registry).
+          <br>Als we een door SIDN en haar registrars gebruikte code voor landingspagina's vinden, tonen we die.</p></div>{{ end }}
         </div>
       {{ else }}
         <div class="empty-state"><h3>Geen geldig <code>_for-sale</code> record gevonden.</h3><p>Deze domeinnaam lijkt niet expliciet als te koop gemarkeerd.<br>Je kunt informatie proberen te vinden via WHOIS/RDAP.<br>Of bezoek <a href="#" onclick="confirmOpen('http:\/\/{{ .Info.Unicode }}')" class="link">{{ .Info.Unicode }}</a> om te zien of daar meer informatie is te vinden.</p></div>
