--- a/templates/index.gohtml
+++ b/templates/index.gohtml
@@ -6,7 +6,7 @@
       <code>_for-sale</code> TXT-record aanwezig is en tonen relevante gegevens.</p>
     <form action="/lookup" method="get" class="form-grid" autocomplete="off" novalidate>
       <label for="domain" class="visually-hidden">Domeinnaam</label>
-      <input id="domain" name="domain" type="text" class="input-lg" placeholder="{{ .DefaultDemo }}" required>
+      <input id="domain" name="domain" type="text" class="input-lg" placeholder="{{ .DefaultDemo }}" required autocomplete="off" spellcheck="false" autocapitalize="off" inputmode="url">
       <button class="btn btn-primary btn-lg" type="submit">Controleren</button>
     </form>
     <p class="hint">Werkt met Unicode domeinen (IDN). We tonen zowel Unicode als Punycode om misverstanden te voorkomen.</p>
